cstate management setup and other changes

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,5 @@
-// Body
-$body-bg: #f8fafc;
+$secondary: #17252A;
+$primary: #65CCBB;
 
-// Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+@import "node_modules/bootstrap/scss/bootstrap";
+
